# my-todo-app

./: .gitignore  README.md  pyproject.toml  tmpclaude-8b86-cwd
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  README_HF.md  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_todos_and_tags.py
backend/src/: main.py
backend/src/agent/: __init__.py  todo_agent.py
backend/src/core/: auth.py  config.py  database.py
backend/src/mcp/: __init__.py  schemas.py  tools.py
backend/src/models/: __init__.py  conversation.py  enums.py  message.py  todo.py  todo_tag.py  (+1 more)
frontend/: .env.local.example  .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
hf-todo-api/: requirements.txt
hf-todo-api/src/: main.py
history/adr/: ADR-001-authentication-approach.md
specs/001-todo-cli-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-intermediate-enhancements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-advanced-intelligent-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-phase-ii-fullstack/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-ai-todo-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  main.py  todos.json
src/cli/: menu.py
src/models/: todo.py
src/services/: todo_service.py
src/utils/: __init__.py  animations.py
(+105 files in other folders)
