[project]
name = "todo-cli"
version = "0.1.0"
description = "Phase I In-Memory Todo CLI Application"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "colorama>=0.4.6",
]

[project.scripts]
todo = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
